crates/resolver/tests/snapshots/ecosystem_fixtures__cpp_vcpkg_manifest_rewrite.snap
---
source: crates/resolver/tests/ecosystem_fixtures.rs
expression: "fs::read_to_string(vcpkg).unwrap()"
---
{
  "name": "example",
  "version": "1.0.1",
  "dependencies": ["fmt"],
  "custom": { "preserved": true }
}
