crates/resolver/tests/snapshots/ecosystem_fixtures__node_manifest_parsing.snap
---
source: crates/resolver/tests/ecosystem_fixtures.rs
expression: "render_packages(vec![NodejsResolver.resolve(&root,\n&config(\".\", ResolverType::Nodejs)).unwrap()])"
---
name = app
version = 1.0.0
path = .
private = false
