crates/resolver/tests/snapshots/ecosystem_fixtures__node_manifest_rewrite.snap
---
source: crates/resolver/tests/ecosystem_fixtures.rs
expression: "fs::read_to_string(manifest).unwrap()"
---
{
  "name": "app",
  "version": "1.0.1",
  "dependencies": {
    "core": "^1.0.0"
  },
  "peerDependencies": {
    "plugin-api": "^1.0.0"
  },
  "custom": {
    "preserved": true
  }
}
