crates/resolver/tests/snapshots/ecosystem_fixtures__node_npm_workspace_parsing.snap
---
source: crates/resolver/tests/ecosystem_fixtures.rs
expression: "render_packages(NodejsResolver.resolve_all(&root.join(\"npm\")).unwrap())"
---
name = core
version = 1.0.0
path = packages/core
private = false

name = npm-root
version = 1.0.0
path = .
private = true

name = private
version = 1.0.0
path = packages/private
private = true
