crates/resolver/tests/snapshots/ecosystem_fixtures__python_static_version_rewrite.snap
---
source: crates/resolver/tests/ecosystem_fixtures.rs
expression: "fs::read_to_string(init).unwrap()"
---
__version__ = "1.0.1"
